--- a/samsung_sw/.vscode/settings.json
+++ b/samsung_sw/.vscode/settings.json
@@ -4,6 +4,7 @@
     "ostream": "cpp",
     "iostream": "cpp",
     "queue": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "vector": "cpp"
   }
 }
